Panelize bottom bar

--- a/WikiVisor/skins/chameleon/custom.scss
+++ b/WikiVisor/skins/chameleon/custom.scss
@@ -431,3 +431,10 @@ li.gallerybox div.thumb {
 	border: 1px solid $sea-green;
 	background-color: #fff;
 }
+
+/* panelize bottom bar */
+	margin-left: 3rem;
+	margin-right: 3rem;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+}
