--- a/WikiVisor/skins/chameleon/layouts/custom.xml
+++ b/WikiVisor/skins/chameleon/layouts/custom.xml
@@ -66,7 +66,7 @@ with this program. If not, see <http://www.gnu.org/licenses/>.
 		</row>
 <!-- Footer -->
 		<row class="">
-			<cell class="d-flex flex-column flex-md-row p-1 align-items-center justify-content-center justify-content-md-between bg-midnight-blue">
+			<cell class="bottom-bar d-flex flex-column flex-md-row p-1 align-items-center justify-content-center justify-content-md-between bg-midnight-blue">
 				<component type="Html"><![CDATA[
 					<span class="small d-inline-block pl-3">&copy; DIMS <script>document.write(new Date().getFullYear())</script></span>
 				]]></component>
