Buttos with arrows fix

--- a/WikiVisor/skins/chameleon/custom.scss
+++ b/WikiVisor/skins/chameleon/custom.scss
@@ -440,6 +440,6 @@ li.gallerybox div.thumb {
 }
 
 #btnGroupAddon {
-	background-color: rgba(0,0,0,.1);
+	background-color: rgba(0,0,0,.1) !important;
 	@extend .text-white;
 }
