--- a/WikiVisor/skins/chameleon/custom.scss
+++ b/WikiVisor/skins/chameleon/custom.scss
@@ -439,7 +439,17 @@ li.gallerybox div.thumb {
 	border-top-right-radius: 5px;
 }
 
-#btnGroupAddon {
-	background-color: rgba(0,0,0,.1) !important;
-	@extend .text-white;
+/* pseudo buttons */
+
+.btnGroup {
+	cursor: pointer;
+	#btnGroupAddon {
+		background-color: rgba(0,0,0,.1) !important;
+		@extend .text-white;
+	}
+	&:hover {
+		#btnGroupAddon {
+			background-color: rgba(0,0,0,.175) !important;
+		}
+	}
 }
