--- a/WikiVisor/skins/chameleon/custom.scss
+++ b/WikiVisor/skins/chameleon/custom.scss
@@ -465,3 +465,19 @@ li.gallerybox div.thumb {
 	font-weight: bold;
 	font-family: 'Font Awesome 5 Free';
 }
+
+/* tables */
+
+table {
+	@extend .mb-4;
+	th {
+		background: $sea-green;
+		@extend .text-white;
+		@extend .p-3;
+	}
+	td {
+		border-bottom: 1px solid #c0ccdb;
+		@extend .px-3;
+		@extend .py-2;
+	}
+}
