--- a/WikiVisor/skins/chameleon/custom.scss
+++ b/WikiVisor/skins/chameleon/custom.scss
@@ -472,7 +472,7 @@ table {
 	@extend .border-0;
 	@extend .mb-4;
 	th {
-		background: $sea-green !important;
+		background-color: $sea-green !important;
 		@extend .border-0;
 		@extend .text-white;
 		@extend .p-3;
